# Task-Management-API-Skills-Development

./: README.md
.claude/skills/: fastapi.skill  pytest.skill
.claude/skills/building-rag-systems/: SKILL.md
.claude/skills/building-rag-systems/references/: chunking-strategies.md
.claude/skills/fastapi/: SKILL.md
.claude/skills/fastapi/assets/templates/hello-world/: README.md  main.py  requirements.txt
.claude/skills/fastapi/references/: best-practices.md  database.md  project-structure.md
.claude/skills/fastapi/scripts/: add_auth.py  add_database.py  generate_crud.py  scaffold_project.py
.claude/skills/pytest/: SKILL.md
.claude/skills/pytest/references/: fixtures.md  mocking.md  patterns.md  pytest-8x-9x.md
.claude/skills/scaffolding-openai-agents/: SKILL.md
.claude/skills/scaffolding-openai-agents/references/: tool-design.md
.claude/skills/sqlmodel/: SKILL.md
.claude/skills/sqlmodel/references/: relationships.md
Task-Management-API/: database.py  models.py  test_main.py
fastapi-hello/: .env.example  .gitignore  main.py  pyproject.toml
